--- a/app/views/game/game.html.erb
+++ b/app/views/game/game.html.erb
@@ -8,3 +8,5 @@
   <input type="text" name="grid" class="hide" value="<%= @grid.join("") %>">
   <input type="submit" value="Go on!">
 </form>
+
+<p>tentatives: <%= @tentative %></p>
